--- a/app/assets/stylesheets/blocks/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/_global-nav.sass
@@ -30,6 +30,7 @@ $global-nav-width: 5rem
   justify-content: center
   border-top: solid .0625rem $side-border
   color: $reversal-text
+  transition: color .2s ease-in, background-color .2s ease-in
   &:hover
     background-color: $side-shade
   &.is-active
