--- a/app/assets/stylesheets/settings/helpers/long-text.sass
+++ b/app/assets/stylesheets/settings/helpers/long-text.sass
@@ -7,6 +7,9 @@
     +text-block(1.2em 1.4 .6em)
   p
     +text-block(.9375rem 2 1.4em)
+  a
+    +default-link
+    +hover-link-reversal
   p + h1,
   p + h2,
   p + h3,
