--- a/app/views/pages/new.html.slim
+++ b/app/views/pages/new.html.slim
@@ -1,7 +1,8 @@
 header.page-header
   .container
-    h2.page-header__title 新規ページ
-
+    .page-header__container
+      h1.page-header__title
+        | 新規ページ作成
 .page-body
   .container
     = render "form", page: @page, method: "POST", url: "/pages"
