--- a/app/views/practices/index.html.slim
+++ b/app/views/practices/index.html.slim
@@ -4,7 +4,7 @@ header.page-header
     .page-header__container
       h2.page-header__title
         = t('practices')
-      = link_to new_practice_path, class: 'is-button-standard-sm-secondary is-multi-lines' do
+      = link_to new_practice_path, class: 'is-button-standard-md-warning' do
         i.fa.fa-plus
         = t('new_practice')
 
