--- a/app/assets/stylesheets/blocks/_categories.sass
+++ b/app/assets/stylesheets/blocks/_categories.sass
@@ -1,25 +1,32 @@
-.categories-item
-  margin-bottom: 3rem
-  max-width: 62.5rem
-  +margin(horizontal, auto)
-.categories-item__header
-  display: flex
-  justify-content: space-between
-  align-items: center
-  margin-bottom: .5rem
+.categories
+  box-shadow: rgba(black, .2) 0 .0625rem .125rem
+  border-radius: .25rem
+  width: 100%
+
+.categories__header
+  background-color: $background-color-shade
+  border: solid .0625rem #aaaaaa
+  +border-radius(top, .25rem)
+
+.categories__items
+  +border(horizontal, solid .0625rem $background-color-shade)
+
 .categories-item__title
   +text-block(1.5rem 1.45, $side)
-.categories__labels
-  display: flex
-  justify-content: space-between
+
 .categories__label
-  flex: 1
-  +text-block(.75rem 2rem, $reversal-text center)
+  +text-block(.75rem 2rem, $main-color center 600)
+  border: solid .0625rem #aaaaaa
+
 .categories__item
-  display: flex
-  justify-content: space-between
-  border-bottom: #ccc solid 1px
-  +padding(vertical, .5rem)
+  background-color: $base-color
+  &:last-child
+    +border-radius(bottom, .25rem)
+.categories__item-value
+  padding: .375rem .75rem
+  border: solid .0625rem $background-color-shade
+  +text-block(.875rem 1.45)
+
 .categories-item__body
   border-radius: .25rem
   background-color: $base-color
@@ -31,11 +38,6 @@
     +text-block(.875rem 1.8 .6em)
   *:last-child
     margin-bottom: 0
-.categories__item-value
-  flex: 1
-  +padding(horizontal, 1rem)
-
-
 
 .category-practices-item
   padding: .75rem 1rem
