--- a/app/assets/stylesheets/blocks/_practices-edit.sass
+++ b/app/assets/stylesheets/blocks/_practices-edit.sass
@@ -1,6 +1,7 @@
 .practices-edit__input
-  height: 45rem
+  min-height: 22rem
 .practices-edit__preview
   background-color: $base-color
-  padding: 1rem
-  height: 100%
+  padding: .5rem
+  +text-block(.875rem 1.8 1.4em)
+  border-radius: .25rem
