--- a/app/assets/stylesheets/blocks/user/_completed-practices-list.sass
+++ b/app/assets/stylesheets/blocks/user/_completed-practices-list.sass
@@ -1,7 +1,7 @@
 .completed-practices-list__items
   margin-bottom: -.25rem
 .completed-practices-list-item:not(:last-child)
-  border-bottom: solid .0625rem $background-color
+  border-bottom: dotted .0625rem $background-color
 .completed-practices-list-item__link
   +text-block(.875rem 1.55, block $main-color)
   +padding(vertical, .25rem)
