--- a/app/assets/stylesheets/blocks/user/_user-data.sass
+++ b/app/assets/stylesheets/blocks/user/_user-data.sass
@@ -1,3 +1,10 @@
+.user-part
+  background-color: #b04d4d
+  +inline-block
+  padding: .125rem .5rem
+  +text-block(.75rem 1.45, center $reversal-text 600)
+  margin-right: .5rem
+  border-radius: .25rem
 .user-data
   padding: 1rem
   background-color: $base-color
@@ -6,14 +13,6 @@
   margin-bottom: 1rem
   overflow: hidden
   +position(relative)
-.user-data__part
-  background-color: #b04d4d
-  +inline-block
-  +padding(vertical, .25rem)
-  +text-block(.75rem 1.45, center $reversal-text 600)
-  transform: rotate(-45deg)
-  +position(absolute, left -1.625rem, top 1.25rem, 1)
-  width: 7.5rem
 .user-data__description
   height: 100%
   border-radius: .25rem
