--- a/app/views/admin/home/index.html.slim
+++ b/app/views/admin/home/index.html.slim
@@ -1,7 +1,7 @@
 header.page-header
   .container
-    h2.page-header__title
-      = t('admin_index')
-
+    .page-header__container
+      h2.page-header__title
+        = t('admin_index')
 .page-body
   .container
