--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -2,43 +2,48 @@ nav.global-nav
   .global-nav-current-user
     .global-nav-current-user__icon
       = gravatar_tag current_user, size: '320'
-  //
-    .global-nav-links.is-auth-links
-      - if current_user.admin?
-        li.global-nav-dropdown__item
-          = link_to t('admin_index'), admin_root_path, class: "global-nav-dropdown__link"
-        li.global-nav-dropdown__item
-          = link_to t('categories'), admin_categories_path, class: "global-nav-dropdown__link"
   .global-nav-links.is-contents-links
     ul.global-nav-links__items
-      - if current_user
+      li.global-nav-links__item
+        = link_to practices_path, class: "global-nav-links__link #{controller_name == 'practices' ? 'is-active' : ''}" do
+          .global-nav-links__link-icon
+            i.fa.fa-book
+          .global-nav-links__link-label
+            = t('practices')
+      li.global-nav-links__item
+        = link_to reports_path, class: "global-nav-links__link #{controller_name == 'reports' ? 'is-active' : ''}" do
+          .global-nav-links__link-icon
+            i.fa.fa-pencil
+          .global-nav-links__link-label
+            = t('reports')
+      li.global-nav-links__item
+        = link_to users_path, class: "global-nav-links__link #{controller_name == 'users' ? 'is-active' : ''}" do
+          .global-nav-links__link-icon
+            i.fa.fa-users
+          .global-nav-links__link-label
+            = t('users')
+      li.global-nav-links__item
+        = link_to feeds_path, class: "global-nav-links__link #{controller_name == 'feeds' ? 'is-active' : ''}" do
+          .global-nav-links__link-icon
+            i.fa.fa-rss
+          .global-nav-links__link-label
+            | みんなのブログ
+      li.global-nav-links__item
+        = link_to "/pages", class: "global-nav-links__link #{controller_name == 'pages' ? 'is-active' : ''}" do
+          .global-nav-links__link-icon
+            i.fa.fa-file-o
+          .global-nav-links__link-label
+            | wiki
+      - if current_user.admin?
         li.global-nav-links__item
-          = link_to practices_path, class: "global-nav-links__link #{controller_name == 'practices' ? 'is-active' : ''}" do
+          = link_to admin_root_path, class: "global-nav-links__link #{controller_name == 'pages' ? 'is-active' : ''}" do
             .global-nav-links__link-icon
-              i.fa.fa-book
+              i.fa.fa-wrench
             .global-nav-links__link-label
-              = t('practices')
+              = t('admin_index')
         li.global-nav-links__item
-          = link_to reports_path, class: "global-nav-links__link #{controller_name == 'reports' ? 'is-active' : ''}" do
+          = link_to admin_categories_path, class: "global-nav-links__link #{controller_name == 'pages' ? 'is-active' : ''}" do
             .global-nav-links__link-icon
-              i.fa.fa-pencil
+              i.fa.fa-wrench
             .global-nav-links__link-label
-              = t('reports')
-        li.global-nav-links__item
-          = link_to users_path, class: "global-nav-links__link #{controller_name == 'users' ? 'is-active' : ''}" do
-            .global-nav-links__link-icon
-              i.fa.fa-users
-            .global-nav-links__link-label
-              = t('users')
-        li.global-nav-links__item
-          = link_to feeds_path, class: "global-nav-links__link #{controller_name == 'feeds' ? 'is-active' : ''}" do
-            .global-nav-links__link-icon
-              i.fa.fa-rss
-            .global-nav-links__link-label
-              | みんなのブログ
-        li.global-nav-links__item
-          = link_to "/pages", class: "global-nav-links__link #{controller_name == 'pages' ? 'is-active' : ''}" do
-            .global-nav-links__link-icon
-              i.fa.fa-file-o
-            .global-nav-links__link-label
-              | wiki
+              = t('categories')
