--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html lang="ja"
+html.is-admin lang="ja"
   head
     meta charset="utf-8" /
     meta content="IE=edge" http-equiv="X-UA-Compatible" /
@@ -16,11 +16,15 @@ html lang="ja"
       var signed_in = #{current_user ? true : false}
     - if head_last = yield(:head_last)
       = head_last
-  body class="#{page_slug}"
+  body class="#{body_class} #{yield(:page_classes)}"
+    - unless yield(:page_classes).include?('no-global-nav')
+      = render 'global_nav'
     .wrapper.js-open-drawer-wrapper
-      = render 'admin_header'
+      - unless yield(:page_classes).include?('no-header')
+        = render 'header'
       = render 'alert'
       main.page
         = yield
-      = render 'footer'
-    = render 'mobile_global_nav'
+        //= render 'active_users'
+    - unless yield(:page_classes).include?('no-recent-reports')
+      = render 'reports/recent_reports'
