--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -1,31 +1,42 @@
-= form_for practice do |f|
+= form_for practice, html: { class: 'form' } do |f|
   - if practice.errors.any?
     = error_messages_for :practice
-  .form-group
-    = f.label :title
-    = f.text_field :title, size: '10', class: 'form-control js-warning-form'
-  .row.js-markdown-parent
-    .col-sm-6
-      .form-group
-        = f.label :description
-        = f.text_area :description, size: '10x10', class: 'form-control js-warning-form js-markdown-input practices-edit__input'
-    .col-sm-6
-      | プレビュー
-      .js-markdown-preview.is-long-text-style.practices-edit__preview
-  .row.js-markdown-parent
-    .col-sm-6
-      .form-group
-        = f.label :goal
-        = f.text_area :goal, size: '10x10', class: 'form-control js-markdown-input practices-edit__input'
-    .col-sm-6
-      | プレビュー
-      .js-markdown-preview.is-long-text-style.practices-edit__input.practices-edit__preview
-  .form-group
-    = f.label :category_id
-    = f.collection_select :category_id, Category.all, :id, :name, {}, class: 'form-control'
-  .form-group
-    = f.submit nil, class: 'btn btn-primary btn-sm'
-    - if params[:action] == 'new' || params[:action] == 'create'
-      = link_to "キャンセル", practices_path, class: "btn btn-secondary btn-sm"
-    - elsif params[:action] == 'edit' || params[:action] == 'update'
-      = link_to "キャンセル", practice_path, class: "btn btn-secondary btn-sm"
+  .form__items
+    .form-item
+      .row
+        .col-sm-6
+          = f.label :category_id, class: 'form-item__label'
+          .is-button-standard-md-secondary.is-select.is-block
+            = f.collection_select :category_id, Category.all, :id, :name, {}
+    .form-item
+      .row
+        .col-sm-6
+          = f.label :title, class: 'form-item__label'
+          = f.text_field :title, class: 'form-item__text-input js-warning-form'
+    .form-item
+      .row.js-markdown-parent
+        .col-sm-6
+            = f.label :description, class: 'form-item__label'
+            = f.text_area :description, class: 'form-item__textarea js-warning-form js-markdown-input practices-edit__input'
+        .col-sm-6
+          .form-item__label
+            | プレビュー
+          .js-markdown-preview.is-long-text-style.practices-edit__input.practices-edit__preview
+    .form-item
+      .row.js-markdown-parent
+        .col-sm-6
+          = f.label :goal, class: 'form-item__label'
+          = f.text_area :goal, class: 'form-item__textarea js-markdown-input js-warning-form practices-edit__input'
+        .col-sm-6
+          .form-item__label
+            | プレビュー
+          .js-markdown-preview.is-long-text-style.practices-edit__input.practices-edit__preview
+  .form-actions
+    ul.form-actions__items
+      li.form-actions__item
+        = f.submit nil, class: 'is-button-standard-lg-warning'
+      li.form-actions__item
+        - if params[:action] == 'new' || params[:action] == 'create'
+          = link_to "キャンセル", practices_path, class: "is-button-standard-md-secondary"
+        - elsif params[:action] == 'edit' || params[:action] == 'update'
+          = link_to "キャンセル", practice_path, class: "is-button-standard-md-secondary"
