--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,15 +1,4 @@
 .row.is-gutter-width-32
   - users.each do |user|
     .col-md-3.col-xs-12
-      .users-item(class="#{user.active? ? 'active' : 'inactive'}")
-        .users-item__inner
-          header.users-item__header
-            .users-item__header-container
-              .users-item__name
-                = link_to user.login_name, user, class: "users-item__name-link"
-              .users-item__icon
-                = link_to user do
-                  = gravatar_tag user, html: {class: "users-item__icon-image"}
-          .users-item__body
-            .users-item__description
-              = simple_format truncate(user.description, length: 100)
+      = render 'user_item', user: user
